fix: alignment of elements inside product card

--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -1,3 +1,10 @@
 .aside_container {
   max-width: 20rem;
 }
+.card_vertical {
+  height: 27rem;
+}
+.card_details {
+  position: absolute;
+  bottom: 0;
+}
